Added test for max and min age filtering